k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zim-iot-service
  namespace: iot-edge
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: zim-iot-service
  type: ClusterIP
