k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zim-iot-vs
  namespace: iot-edge
spec:
  hosts:
  - "zim-iot-service.iot-edge.svc.cluster.local"
  gateways:
  - cross-cluster-gateway
  http:
  - corsPolicy:
      allowOrigins:
      - exact: "http://133.186.135.247"
      allowMethods:
      - GET
      - POST
      - OPTIONS
      allowHeaders:
      - Content-Type
      - Accept
      maxAge: "24h"
    route:
    - destination:
        host: zim-iot-service.iot-edge.svc.cluster.local
        port:
          number: 80
      weight: 50
    - destination:
        host: zim-iot-service.iot-edge.svc.cluster.local
        port:
          number: 80
      weight: 50
